# app/Http/Controllers/Admin/Teacher/UpdateTeacherController.php
@@ -5,21 +5,11 @@ namespace App\Http\Controllers\Admin\Teacher;
 use App\Data\Admin\Teacher\UpdateTeacher\Request\UpdateTeacherRequestData;
 use App\Data\Shared\Swagger\Request\JsonRequestBody;
 use App\Data\Shared\Swagger\Response\SuccessNoContentResponse;
-use App\Http\Controllers\Controller;
+use App\Http\Controllers\Admin\Teacher\Abstract\TeacherController;
 use App\Models\Teacher;
 use OpenApi\Attributes as OAT;
 
-#[
-    OAT\PathItem(
-        path: '/admins/teachers/{id}',
-        parameters: [
-            new OAT\PathParameter(
-                ref: '#/components/parameters/adminsUpdateTeacherPathParameter',
-            ),
-        ],
-    ),
-]
-class UpdateTeacherController extends Controller
+class UpdateTeacherController extends TeacherController
 {
     #[OAT\Patch(path: '/admins/teachers/{id}', tags: ['adminsTeachers'])]
     #[JsonRequestBody(UpdateTeacherRequestData::class)]
